--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-
+#database config
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Arboviroses
 spring.datasource.username=root
 spring.datasource.password=Bee@1100229933
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#fileSize config
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
