--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #fileSize config
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+#Exceptions config
+server.error.include-stacktrace=never
