--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Arboviroses
 spring.datasource.username=root
 spring.datasource.password=Bee@1100229933
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.profiles.active=test
+spring.jpa.open-in-view=true
 
 #fileSize config
 spring.servlet.multipart.max-file-size=50MB
