--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -4,7 +4,12 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Arboviroses
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.profiles.active=test
+spring.jpa.open-in-view=true
 
 #fileSize config
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+#Exceptions config
+server.error.include-stacktrace=never
