--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -13,3 +13,7 @@ spring.servlet.multipart.max-request-size=50MB
 
 #Exceptions config
 server.error.include-stacktrace=never
+
+#JWT config
+security.jwt.secret-key=SHA256Token
+security.jwt.expiration-time=14400000
