--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -14,6 +14,9 @@ spring.servlet.multipart.max-request-size=50MB
 #Exceptions config
 server.error.include-stacktrace=never
 
+#cors config
+security.cors.allowed-origins=http://localhost:5173
+
 #JWT config
 security.jwt.secret-key=SHA256Token
 security.jwt.expiration-time=620000
