--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
 	</parent>
 	<groupId>com.arboviroses</groupId>
 	<artifactId>conectaDengue</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>conectaDengue</name>
+	<name>ProjetoArboviroses</name>
 	<description>Projeto de analise de dados, baseado em dados fornecidos pela prefeitura de Mossoró-RN.</description>
 	<properties>
 		<java.version>21</java.version>
@@ -20,7 +19,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+		</dependency>  
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -92,9 +91,14 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>  
 	</dependencies>
 
 	<build>
+	<finalName>${project.name}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
