--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     networks:
       - springapimysql-net
     environment:
-      - spring.datasource.url=jdbc:mysql://mysqldb:3306/Arboviroses?allowPublicKeyRetrieval=true    
+      - spring.datasource.url=jdbc:mysql://mysqldb:${MYSQL_PORT}/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true    
     depends_on:
       - mysqldb
     
@@ -16,14 +16,14 @@ services:
       - .m2:/root/.m2
       
   mysqldb:
-    image: "mysql:8.0"
+    image: "mysql:8.4"
     restart: always
     ports:
-      - 9000:3306
+      - ${MYSQL_PORT}:${MYSQL_PORT}
     networks:
       - springapimysql-net  
     environment:
-      - MYSQL_DATABASE=${MYSQLDATABASE}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
