atualiza .env.examples

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
+#MYSQL CREDENTIALS
+MYSQL_HOST=
+MYSQL_PORT=
 MYSQL_DATABASE=
 MYSQL_USER=
-MYSQLPASSWORD=
+MYSQL_PASSWORD=
 MYSQL_ROOT_PASSWORD=
+
+#CORS CONFIG
+ALLOWED_ORIGINS=*
