--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 #fileSize config
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.file-size-threshold=2KB
+
+# Timeout para requests longos
+server.connection-timeout=120000
 
 #Exceptions config
 server.error.include-stacktrace=never
